# voice-agent

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: kokoro_tts.py  voice_agent.py
backend/app/api/: health.py  prompt.py  sources.py  token.py  upload.py
backend/app/core/: config.py  logging.py  state.py
backend/app/services/: embeddings.py  ingestion.py  llm.py  rag.py  stt.py  tts.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentUpload.tsx  LiveTranscript.tsx  RagSourcesPanel.tsx  SystemPromptEditor.tsx  VoiceCall.tsx
frontend/src/hooks/: useVoiceRoom.ts
frontend/src/lib/: api.ts
