[project]
name = "voice-agent-backend"
version = "0.1.0"
description = "Real-time voice AI agent with LiveKit, RAG over uploaded PDFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "livekit>=0.18.0",
    "livekit-agents>=0.12.0",
    "livekit-plugins-openai>=0.10.0",
    "chromadb>=0.5.0",
    "google-genai>=0.3.0",
    "pymupdf>=1.24.0",
    "kokoro-onnx>=0.4.0",
    # onnxruntime dropped cp310 wheels in 1.21+; pin to a release that still ships them.
    "onnxruntime>=1.18.0,<1.21.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
